--- a/flink-dist/pom.xml
+++ b/flink-dist/pom.xml
@@ -586,6 +586,14 @@ under the License.
 							<groupId>org.slf4j</groupId>
 							<artifactId>slf4j-log4j12</artifactId>
 						</exclusion>
+						<exclusion>
+							<groupId>ch.qos.logback</groupId>
+							<artifactId>logback-classic</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>ch.qos.logback</groupId>
+							<artifactId>logback-core</artifactId>
+						</exclusion>
 					</exclusions>
 				</dependency>
 			</dependencies>
