--- a/flink-yarn-shuffle/pom.xml
+++ b/flink-yarn-shuffle/pom.xml
@@ -112,6 +112,14 @@ under the License.
 					<groupId>commons-digester</groupId>
 					<artifactId>commons-digester</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-core</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
