[#6079629] Flink-1.11 enable state meta persist and filter empty state meta

--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -44,6 +44,7 @@ common:
   state.checkpoints.dir: ${checkpoint.hdfs.prefix}/1.11/flink/fs_checkpoint_dir
   state.backend.incremental: true
   state.checkpoints.num-retained: 3
+  state.checkpoints.allow-persist-state-meta: true
   state.backend.rocksdb.checkpoint.transfer.thread.num: 4
   state.backend.rocksdb.use-fsync: true
   state.backend.rocksdb.log.level: info_level
