[#5836839][connectors] Bump commons to 0.0.17 for all connectors

--- a/flink-connectors/flink-connector-htap/pom.xml
+++ b/flink-connectors/flink-connector-htap/pom.xml
@@ -50,6 +50,19 @@
 			</exclusions>
 		</dependency>
 
+		<!-- override commons version in com.bytedance.htap:jclient-jni -->
+		<dependency>
+			<groupId>com.bytedance</groupId>
+			<artifactId>commons</artifactId>
+			<version>${commons.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-library</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
