--- a/flink-connectors/flink-connector-jdbc/pom.xml
+++ b/flink-connectors/flink-connector-jdbc/pom.xml
@@ -58,6 +58,19 @@ under the License.
 			</exclusions>
 		</dependency>
 
+		<!-- override commons version in com.bytedance:mysql -->
+		<dependency>
+			<groupId>com.bytedance</groupId>
+			<artifactId>commons</artifactId>
+			<version>${commons.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-library</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
