--- a/flink-connectors/flink-connector-loghouse/pom.xml
+++ b/flink-connectors/flink-connector-loghouse/pom.xml
@@ -52,7 +52,7 @@ under the License.
 		<dependency>
 			<groupId>com.bytedance</groupId>
 			<artifactId>commons</artifactId>
-			<version>0.0.7</version>
+			<version>${commons.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.scala-lang</groupId>
