--- a/flink-connectors/pom.xml
+++ b/flink-connectors/pom.xml
@@ -37,6 +37,7 @@ under the License.
 		<mysql.version>1.2.6-RELEASE</mysql.version>
 		<databus.version>1.2.0-SNAPSHOT</databus.version>
 		<metrics4j.version>1.0.27</metrics4j.version>
+		<commons.version>0.0.17</commons.version>
 	</properties>
 
 	<artifactId>flink-connectors</artifactId>
