--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -237,6 +237,7 @@ non-global:
         speculativeSlowContainerTimeoutMs,
         releaseTimeoutContainerNum,
         pendingPhasePods,
+        podOutOfSyncTime,
       # gang
         gangFailedNum,
         gangDowngradeNum,
