--- a/flink-dist-tob/src/main/resources/flink-conf-las.yaml
+++ b/flink-dist-tob/src/main/resources/flink-conf-las.yaml
@@ -87,6 +87,9 @@ common:
   kubernetes.jobmanager.cpu: 1.0
   kubernetes.service-account: gts
   kubernetes.rest-service.exposed.type: ClusterIP
+  kubernetes.pod-syncer.enabled: true
+  kubernetes.pod-syncer.max-out-of-sync-time: "180 min"
+  kubernetes.pod-syncer.check-interval: "5 min"
 
 
   # REST endpoint and Client
