--- a/flink-dist-tob/src/main/resources/flink-conf-las.yaml
+++ b/flink-dist-tob/src/main/resources/flink-conf-las.yaml
@@ -90,6 +90,7 @@ common:
   kubernetes.pod-syncer.enabled: true
   kubernetes.pod-syncer.max-out-of-sync-time: "180 min"
   kubernetes.pod-syncer.check-interval: "5 min"
+  kubernetes.pod-matching.strategy: MIN_RESOURCE
 
 
   # REST endpoint and Client
