[#6104806] Support kafka connector version reporting to opentsdb.

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -166,6 +166,8 @@ non-global:
       # kafka latency
         fetch-latency-avg,
         fetch-latency-max,
+      # kafka connector verison
+        kafkaConnectorVersion,
       # Network Memory
         TotalMemorySegments,
         AllocatedMemorySegments,
