[#6104806] Support rocketmq connector version reporting to opentsdb.

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -168,6 +168,8 @@ non-global:
         fetch-latency-max,
       # kafka connector verison
         kafkaConnectorVersion,
+      # rocketmq connector verison
+        rocketmqConnectorVersion,
       # Network Memory
         TotalMemorySegments,
         AllocatedMemorySegments,
