[#5598939][ByteHTAP] add plan cache metrics in metrics-whitelist-htap.yaml

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
@@ -87,6 +87,8 @@ non-global:
         query_latency,
         query_fetch_duration,
         query_fetch_cost,
+        plan_cache_total,
+        plan_cache_hit,
       # jm threadPool usage
         numPendingIOTask,
         numRunningIOTask,
